crates/dbmd-cli/tests/snapshots/json_snapshots__fm_query_active_contacts.snap
---
source: crates/dbmd-cli/tests/json_snapshots.rs
expression: out
---
[{"company":"[[records/companies/acme]]","created":"2025-01-05T09:00:00-08:00","email":"david.kim@acme.com","first_touch":"2025-01-05","last_touch":"2026-05-01","links":[],"meta-type":"fact","name":"David Kim","path":"records/contacts/david-kim.md","role":"Account Executive","status":"active","summary":"Account Executive at Acme; owns the Northstar relationship internally","tags":["internal"],"type":"contact","updated":"2026-05-01T09:00:00-07:00"},{"company":"[[records/companies/northstar]]","created":"2025-09-14T11:20:00-07:00","email":"elena.rodriguez@northstar.io","first_touch":"2025-09-14","last_touch":"2026-05-22","links":[],"meta-type":"fact","name":"Elena Rodriguez","path":"records/contacts/elena-rodriguez.md","role":"Director of Operations","status":"active","summary":"Director of Operations at Northstar; day-to-day account contact on the renewal","tags":["customer"],"type":"contact","updated":"2026-05-22T09:14:00-07:00"},{"company":"[[records/companies/northstar]]","created":"2026-05-12T14:00:00-07:00","email":"marcus.okafor@northstar.io","first_touch":"2026-05-12","last_touch":"2026-05-12","links":[],"meta-type":"fact","name":"Marcus Okafor","path":"records/contacts/marcus-okafor.md","role":"Operations Analyst","status":"active","summary":"Operations Analyst at Northstar Logistics (last_touch: 2026-05-12)","tags":["customer"],"type":"contact","updated":"2026-05-12T14:00:00-07:00"},{"company":"[[records/companies/northstar]]","created":"2025-09-20T10:00:00-07:00","email":"sarah.chen@northstar.io","first_touch":"2025-09-20","last_touch":"2026-05-22","links":[],"meta-type":"fact","name":"Sarah Chen","path":"records/contacts/sarah-chen.md","role":"Director of Operations","status":"active","summary":"Director of Ops at Northstar; renewal champion who drove the 175-seat expansion","tags":["customer","renewal"],"type":"contact","updated":"2026-05-22T09:30:00-07:00"}]
