crates/dbmd-cli/tests/snapshots/json_snapshots__graph_backlinks_northstar_renewal.snap
---
source: crates/dbmd-cli/tests/json_snapshots.rs
expression: out
---
["records/companies/northstar","records/contacts/sarah-chen","records/meetings/2026/04/2026-04-15-northstar-quarterly-review","records/profiles/elena-rodriguez","records/profiles/sarah-chen","records/synthesis/2026-renewal-plan","sources/docs/2026-03-15-northstar-msa"]
