crates/dbmd-cli/tests/snapshots/json_snapshots__query_type_contact.snap
---
source: crates/dbmd-cli/tests/json_snapshots.rs
expression: out
---
[
  {
    "path": "records/contacts/david-kim.md",
    "type": "contact",
    "summary": "Account Executive at Acme; owns the Northstar relationship internally",
    "tags": [
      "internal"
    ],
    "links": [],
    "created": "2025-01-05T09:00:00-08:00",
    "updated": "2026-05-01T09:00:00-07:00",
    "company": "[[records/companies/acme]]",
    "email": "david.kim@acme.com",
    "first_touch": "2025-01-05",
    "last_touch": "2026-05-01",
    "meta-type": "fact",
    "name": "David Kim",
    "role": "Account Executive",
    "status": "active"
  },
  {
    "path": "records/contacts/elena-rodriguez.md",
    "type": "contact",
    "summary": "Director of Operations at Northstar; day-to-day account contact on the renewal",
    "tags": [
      "customer"
    ],
    "links": [],
    "created": "2025-09-14T11:20:00-07:00",
    "updated": "2026-05-22T09:14:00-07:00",
    "company": "[[records/companies/northstar]]",
    "email": "elena.rodriguez@northstar.io",
    "first_touch": "2025-09-14",
    "last_touch": "2026-05-22",
    "meta-type": "fact",
    "name": "Elena Rodriguez",
    "role": "Director of Operations",
    "status": "active"
  },
  {
    "path": "records/contacts/marcus-okafor.md",
    "type": "contact",
    "summary": "Operations Analyst at Northstar Logistics (last_touch: 2026-05-12)",
    "tags": [
      "customer"
    ],
    "links": [],
    "created": "2026-05-12T14:00:00-07:00",
    "updated": "2026-05-12T14:00:00-07:00",
    "company": "[[records/companies/northstar]]",
    "email": "marcus.okafor@northstar.io",
    "first_touch": "2026-05-12",
    "last_touch": "2026-05-12",
    "meta-type": "fact",
    "name": "Marcus Okafor",
    "role": "Operations Analyst",
    "status": "active"
  },
  {
    "path": "records/contacts/sarah-chen.md",
    "type": "contact",
    "summary": "Director of Ops at Northstar; renewal champion who drove the 175-seat expansion",
    "tags": [
      "customer",
      "renewal"
    ],
    "links": [],
    "created": "2025-09-20T10:00:00-07:00",
    "updated": "2026-05-22T09:30:00-07:00",
    "company": "[[records/companies/northstar]]",
    "email": "sarah.chen@northstar.io",
    "first_touch": "2025-09-20",
    "last_touch": "2026-05-22",
    "meta-type": "fact",
    "name": "Sarah Chen",
    "role": "Director of Operations",
    "status": "active"
  }
]
