crates/dbmd-cli/tests/snapshots/json_snapshots__search_renewal_wiki_page.snap
---
source: crates/dbmd-cli/tests/json_snapshots.rs
expression: out
---
[
  {
    "file": "wiki/people/elena-rodriguez.md",
    "line": 9,
    "text": "  - \"[[sources/emails/2026/05/2026-05-22-elena-renewal]]\""
  },
  {
    "file": "wiki/people/elena-rodriguez.md",
    "line": 22,
    "text": "contract. She coordinated the renewal expansion from the operations"
  },
  {
    "file": "wiki/people/elena-rodriguez.md",
    "line": 24,
    "text": "[[sources/emails/2026/05/2026-05-22-elena-renewal]] and the project page"
  },
  {
    "file": "wiki/people/elena-rodriguez.md",
    "line": 25,
    "text": "[[wiki/projects/northstar-renewal]]."
  },
  {
    "file": "wiki/people/sarah-chen.md",
    "line": 5,
    "text": "summary: \"Sarah Chen bio; Northstar renewal champion and economic buyer on the Acme account\""
  },
  {
    "file": "wiki/people/sarah-chen.md",
    "line": 9,
    "text": "  - \"[[records/meetings/2026/05/2026-05-22-northstar-renewal-call]]\""
  },
  {
    "file": "wiki/people/sarah-chen.md",
    "line": 11,
    "text": "tags: [customer, renewal, people]"
  },
  {
    "file": "wiki/people/sarah-chen.md",
    "line": 21,
    "text": "## Role in the renewal"
  },
  {
    "file": "wiki/people/sarah-chen.md",
    "line": 26,
    "text": "closed it on the May renewal call"
  },
  {
    "file": "wiki/people/sarah-chen.md",
    "line": 27,
    "text": "([[records/meetings/2026/05/2026-05-22-northstar-renewal-call]]). The"
  },
  {
    "file": "wiki/people/sarah-chen.md",
    "line": 28,
    "text": "full narrative lives in [[wiki/projects/northstar-renewal]]."
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 5,
    "text": "summary: \"Northstar renewal; 120 → 175 seats, volume discount confirmed at 150, closed May 2026\""
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 6,
    "text": "topic: Northstar renewal"
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 12,
    "text": "  - \"[[records/meetings/2026/05/2026-05-22-northstar-renewal-call]]\""
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 13,
    "text": "  - \"[[sources/emails/2026/05/2026-05-22-elena-renewal]]\""
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 15,
    "text": "tags: [customer, renewal, projects]"
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 19,
    "text": "# Northstar renewal"
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 21,
    "text": "The renewal of [[records/companies/northstar]]'s Acme PM contract,"
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 32,
    "text": "  email [[sources/emails/2026/05/2026-05-22-elena-renewal]]; the"
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 33,
    "text": "  renewal call"
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 34,
    "text": "  [[records/meetings/2026/05/2026-05-22-northstar-renewal-call]] settles"
  },
  {
    "file": "wiki/projects/northstar-renewal.md",
    "line": 40,
    "text": "signed-off plan is [[wiki/synthesis/2026-renewal-plan]]."
  },
  {
    "file": "wiki/synthesis/2026-renewal-plan.md",
    "line": 5,
    "text": "summary: \"Signed-off 2026 Northstar renewal plan; frozen page — the toolkit refuses writes here\""
  },
  {
    "file": "wiki/synthesis/2026-renewal-plan.md",
    "line": 6,
    "text": "topic: 2026 renewal plan"
  },
  {
    "file": "wiki/synthesis/2026-renewal-plan.md",
    "line": 8,
    "text": "  - \"[[wiki/projects/northstar-renewal]]\""
  },
  {
    "file": "wiki/synthesis/2026-renewal-plan.md",
    "line": 9,
    "text": "  - \"[[records/meetings/2026/05/2026-05-22-northstar-renewal-call]]\""
  },
  {
    "file": "wiki/synthesis/2026-renewal-plan.md",
    "line": 10,
    "text": "tags: [renewal, plan, frozen]"
  },
  {
    "file": "wiki/synthesis/2026-renewal-plan.md",
    "line": 14,
    "text": "# 2026 renewal plan"
  },
  {
    "file": "wiki/synthesis/2026-renewal-plan.md",
    "line": 16,
    "text": "The signed-off plan for the [[wiki/projects/northstar-renewal]]. This"
  },
  {
    "file": "wiki/synthesis/2026-renewal-plan.md",
    "line": 27,
    "text": "  [[records/meetings/2026/05/2026-05-22-northstar-renewal-call]]."
  },
  {
    "file": "wiki/synthesis/2026-renewal-plan.md",
    "line": 30,
    "text": "[[wiki/projects/northstar-renewal]], not here."
  }
]
