crates/dbmd-cli/tests/snapshots/json_snapshots__validate_all_clean.snap
---
source: crates/dbmd-cli/tests/json_snapshots.rs
expression: out
---
{
  "issues": [],
  "scope": "all",
  "store": ".",
  "summary": {
    "errors": 0,
    "info": 0,
    "total": 0,
    "warnings": 0
  }
}
